mozdev.org (archived on 2009-09-25)
{
  "alexa_rank": 3366,
  "analysis_subcorpus": true,
  "categories": "business;education;informationtech",
  "char_count": 7212,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.11,
  "homepage_snapshot_redirected_domain": "mozdev.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20091002045828id_/http://www.mozdev.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20091002045828id_/http%3A//mozdev.org",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "mozdev.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090925080151id_/http%3A//www.mozdev.org/community/privacy.html",
  "policy_title": "mozdev.org - www: community/privacy",
  "policy_url": "mozdev.org/community/privacy.html",
  "sha1": "cb58b77ac0a5d4e29f242f13e7aa23b4cfd41756",
  "simhash": 13749488688910389236,
  "simhash_updated": true,
  "site_hostname": "mozdev.org",
  "site_url": "http://mozdev.org",
  "smog": 13.82,
  "strict_updated": true,
  "timestamp": "20090925080151",
  "word_count": 1190,
  "year": 2009
}

--- a/m/mo/moz/mozdev.org.html
+++ b/m/mo/moz/mozdev.org.html
@@ -1,31 +1,24 @@
-<!--The following is the downloaded HTML source of the mozdev.org privacy policy that was archived on 2009-04-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090413231310id_/http%3A//www.mozdev.org/community/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mozdev.org privacy policy that was archived on 2009-09-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090925080151id_/http%3A//www.mozdev.org/community/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html lang="en"><head>
+<title>mozdev.org - www: community/privacy</title>
    <link href="//www.mozdev.org/skin/dft2003/default.css" rel="Stylesheet" type="text/css">
    <link media="print" rel="Stylesheet" type="text/css" href="//www.mozdev.org/skin/dft2003/print.css">
    <link rel="alternate" type="application/rss+xml" title="VCS Commits" href="/feed/vcslog">
    <link rel="alternate" type="application/rss+xml" title="Download files" href="/feed/download_file">
-<link rel="icon" href="http://www.mozdev.org/sharedimages/mozdev-icon.png" type="image/png">
+<link rel="icon" href="//www.mozdev.org/sharedimages/mozdev-icon.png" type="image/png">
 <link rel="stylesheet" href="//www.mozdev.org/default.css" title="today’s style" type="text/css">
-
 <link rel="stylesheet" href="//www.mozdev.org/skin/default/index4.css" type="text/css">
 <link rel="search" type="application/opensearchdescription+xml" title="mozdev.org" href="http://www.mozdev.org/opensearch.xml">
-
 <link rel="help" href="/docs/" title="Site Documentation">
 <link rel="index" href="/projects/active.html" title="Active Projects">
-<link rel="start" href="http://www.mozdev.org/" title="Home">
-
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<title>mozdev.org - www: community/privacy</title>
-
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
+<link rel="start" href="//www.mozdev.org/" title="Home">
+<script src="//www.google-analytics.com/urchin.js" type="text/javascript"></script>
 <script type="text/javascript">
 _uacct = "UA-89152-2";
 urchinTracker();
 </script>
-
 </head>
 <body class="www www-community-privacy" id="mozdev-org">
 	<!-- ################### BEGIN TOP ################## -->
@@ -33,7 +26,7 @@ urchinTracker();
 	<div id="mozdev-date">
 		<!--$mind-it-ignore$-->
 		<ul id="community-links">
-			<li class="mozdev-date">Monday April 13th 2009</li>
+			<li class="mozdev-date">Friday September 25th 2009</li>
 <li class="invisible"><a class="nav-link" href="#content" title="Skip Community Navigation">Skip to Content</a></li>
 <li id="mozorg"><a href="http://www.mozilla.org/">mozilla</a></li>
 <li id="moz-devmo" class="mozlink"><a href="http://developer.mozilla.org/" title="mozilla developer center">DevMo</a></li>
