--- a/p/pa/pae/paessler.com.html
+++ b/p/pa/pae/paessler.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the paessler.com privacy policy that was archived on 2009-06-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615122511id_/http%3A//www.paessler.com/company/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the paessler.com privacy policy that was archived on 2009-09-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090925103622id_/http%3A//www.paessler.com/company/privacypolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en"><head>
   <title>Privacy Policy</title>
@@ -9,12 +9,12 @@
   <link rel="stylesheet" type="text/css" href="/common/print2.css" media="print">
   <link rel="shortcut icon" type="image/ico" href="/favicon.ico">
   <script src="/common/js.js" type="text/javascript"></script>
-  <meta name="keywords" content="network monitoring software, network performance management, network monitoring tools, paessler, network management, network monitor, internet monitoring software, network management tools, load testing, website monitoring, server monitoring tools, network performance testing, prtg, IPcheck, Webserver Stress Tool">
-  <meta name="description" content="Specialized in network monitoring and testing scenarios Paessler offers a range of highly efficient tools with a strong focus on usability and performance and with an excellent price-performance ratio. Our Windows based network monitoring software is essential for today's businesses to ensure the availability of servers, routers, switches, websites and applications. Freeware and free Trial available!">
+  <meta name="keywords" content="Paessler AG, Paessler, network monitoring company">
+  <meta name="description" content="At Paessler AG, we offer more than just software. Our network monitoring solutions provide peace of mind, confidence and convenience at a price you can afford.">
   <meta name="robots" content="follow,noindex"> 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
-<body class="Resource ">
+<body class="Resource  eng">
 <div id="pnlPage">
   <div id="pnlLeft">
     <div id="pnlSecondMenu">
@@ -31,14 +31,13 @@
 	    <a href="/"><img src="/common/img/logoclaim.gif" alt="Availability-, Performance- and Usage-Monitoring" width="680" height="31"></a>
 	</div>
 	<div id="pnlMainMenu">
-	    <a href="https://www.paessler.com/login" class="mainmenu" title="Customer- and Reseller-Login">login</a><br class="clear">
+	    <a href="https://www.paessler.com/login" class="mainmenu" title="Customer- and Reseller-Login">Login</a><br class="clear">
 	</div>
             <div id="pnlContent">
             	<div id="pnlPageTitle"><h1>Privacy Policy</h1></div>
       		<h2>Privacy Policy</h2>
 
-		<div class="page-element" id="hdrImage">
-		</div><h2>We are fully committed to protecting your privacy!</h2>
+		<h2>We are fully committed to protecting your privacy!</h2>
 		<p>Aside from non-personalized cookie-based session tracking (as used by most standard website statistics), which does not involve storage of any personal information whatsoever, we do not track usage of individual anonymous visitors to our websites, nor do we store any personal information of anonymous users with regard to IP addresses or cookies.</p>
 		<p>When you purchase software from our company (usually through our Online Store) under German tax legislation, we are required to store your address, purchase data and IP-address. Part of this information is also stored to allow you to log into our website. If you log into our website with this personal login information (i.e. to gain access to product downloads and your personal license keys) we will log some of your activity for security purposes.</p>
 		<p>All registered users are notified about new versions of the products they have purchased on a regular basis. We send our newsletter "PaesslerNews" to all customers that have bought a product, and also to everyone opting into our PaesslerNews newsletter. At any time you may ask to be excluded or removed from these mailings, and an unsubscribe link is always provided at the end of every newsletter.</p>
@@ -61,6 +60,7 @@
 	<li><a href="http://www.paessler.com/prtg" title="Network Monitoring Made Easy">PRTG Network Monitor</a></li>
 	<li><a href="http://www.paessler.com/prtg6" title="Network Usage And Bandwidth Traffic Monitoring Made Easy">PRTG Traffic Grapher</a></li>
 	<li><a href="http://www.paessler.com/webstress" title="Web Server Performance, Load, and Stress-Test">Webserver Stress Tool</a></li>
+	<li><a href="http://www.paessler.com/serversimulator" title="Multi Protocol Device Simulation for Testing Purposes">Multi Server Simulator</a></li>
 	<li><a href="http://www.paessler.com/tools" title="Free Network Monitoring Tools for Your Network">Free Network Tools</a></li></ul>
 </li>
 
