--- a/c/ca/cas/cashu.com.html
+++ b/c/ca/cas/cashu.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cashu.com privacy policy that was archived on 2009-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090605005437id_/http%3A//www.cashu.com/site/privacyPolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cashu.com privacy policy that was archived on 2009-09-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090925104509id_/http%3A//www.cashu.com/site/privacyPolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 		  <meta http-equiv="Content-Type" content="text/html;charset=windows-1256">
@@ -45,7 +45,7 @@ secure, secure payment, payment method, secure payment method, cards, black, acc
 		<a href="/index.pl"><img src="http://www.cashu.com/images/new/images/cashu.gif" width="119" height="58" alt="" border="0"></a>
       		 </div>
       		 <div class="channels">
-      		 <div class="txt_sml marb_30 arab" align="right"><a href="javascript:changeLang()" title="واجهة كاش يو العربية.">الواجهة العربية</a><span>.</span><a href="https://www.cashu.com/CLogin/registersForm" title="Open account on cashU">Open account</a>
+      		 <div class="txt_sml marb_30 arab" align="right"><a href="javascript:changeLang()" title="واجهة كاش يو العربية.">الواجهة العربية</a><span>.</span><a href="http://www.cashu.com/site/mainRegister" title="Open account on cashU">Open account</a>
 <span>.</span><a href="/CLogin/login" title="Login to your cashU account">Login</a>
 </div><div class="links" align="right">
 		     <span class="lcrv">&nbsp;</span> <a href="/site/faq" title="FAQs, Email and Phone support">Support</a>
@@ -59,7 +59,7 @@ secure, secure payment, payment method, secure payment method, cards, black, acc
    	 <div class="cls"></div> 
    		<!-- End header--><div class="cls"> </div> </div><!-- End header--> 
       		 <!-- Begin (Flash / Image) Div -->
-		<div><img src="/images/new/images/cards2.jpg" title=" play Games With cashU " alt="" style="padding-top:3px;"></div>
+		<div><img src="/images/new/images/cards4.jpg" title="shop at amazon using your cashU account" alt="" style="padding-top:3px;"></div>
 		
    		<div class="about">
 			<div class="txt_sml"><a href="http://www.cashu.com/index.pl" title="cashU homepage">Home</a> <span class="orange"> »</span> Privacy Policy</div> <br class="all"><br><div class="fltlft"><h1 class="orange">Privacy Policy</h1></div><br><br> <br><div class="mart_10"><b>Collection of Personal Information</b><br><br>To open your cashU account, we must obtain certain personal information, such as name, address, email or phone number as well as demographic information. You should ensure the email address you have registered with us is always correct, so that we can always contact you with important information regarding your account. 
@@ -83,12 +83,12 @@ used in this new manner. If you have questions or concerns about cashU's collect
      <br clear="all"> <div class="footer"><div style="float: left; width: 100px ;zIndex : 65535;POSITION:absolute;z-index:102;"> 
      		<iframe name="lock" width="100" height="130" marginwidth="0" marginheight="0" frameborder="0" scrolling="no" src="http://www.cashu.com/lock.html"></iframe></div>
 <div class="mart_10">
-<div class="txt_sml links_f" align="right"><a href="/site/aboutUs" title="cashU is a prepaid Internet payment service">About cashU</a><span>&nbsp;.&nbsp;</span><a href="/site/pressCenter" title="presses and announcements on cashU ">Press Centre</a><span>&nbsp;.&nbsp;</span><a href="/site/termOfUse" title="Description of Service and the terms of opening a cashU account">Terms of Use</a><span>&nbsp;.&nbsp;</span><a href="/site/privacyPolicy" title="cashU policy and description of the services">Privacy Policy</a><span>&nbsp;.&nbsp;</span><a href="/site/tellAFreind" title="tell your friends about cashU ">Tell a Friend</a><span>&nbsp;.&nbsp;</span><a href="/site/siteMap" title="Sitemap">Sitemap</a><br class="all">
+<div class="txt_sml links_f" align="right"><a href="/site/aboutUs" title="cashU is a prepaid Internet payment service">About cashU</a><span>&nbsp;.&nbsp;</span><a href="/site/pressCenter" title="presses and announcements on cashU ">Press Centre</a><span>&nbsp;.&nbsp;</span><a href="/site/chooseTermOfUse" title="Description of Service and the terms of opening a cashU account">Terms of Use</a><span>&nbsp;.&nbsp;</span><a href="/site/privacyPolicy" title="cashU policy and description of the services">Privacy Policy</a><span>&nbsp;.&nbsp;</span><a href="/site/tellAFreind" title="tell your friends about cashU ">Tell a Friend</a><span>&nbsp;.&nbsp;</span><a href="/site/siteMap" title="Sitemap">Sitemap</a><br class="all">
   	</div>
   	
   	<br>
 <img src="/images/new/images/cardsFooter.gif" alt="" title="VISA MasterCard Ukash Globalcollect UAEXCHANGE" border="0"> 
-<div class="pad5 blue">Version 5.1.1, Copyright 2002-2009, A <a href="http://www.maktoobgroup.com" target="_blank" title="Maktoob.com">Maktoob</a> Company.</div>  
+<div class="pad5 blue">Version 5.2.0, Copyright 2002-2009</div>  
      <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
      </script>
      <script type="text/javascript">
