--- a/p/pc/pct/pctechbytes.com.html
+++ b/p/pc/pct/pctechbytes.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pctechbytes.com privacy policy that was archived on 2009-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090618101542id_/http%3A//www.pctechbytes.com/disclaimer.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pctechbytes.com privacy policy that was archived on 2009-09-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090925110025id_/http%3A//www.pctechbytes.com/disclaimer.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -36,7 +36,7 @@ body {
   <tbody><tr>
     <td width="100%" height="25" background="images/menuback.gif" bgcolor="#FFFFFF">
 
-<p align="right"><b><font size="2"><a href="http://www.pctechbytes.net/"><font color="#FFFFFF">Forums</font></a><font color="#FFFFFF"> | </font> <font color="#FFFFCC"> <a href="index.htm"><font color="#FFFFFF">Home</font></a></font><font color="#FFFFFF"> | </font> <a href="sitemap.htm"> <font color="#FFFFFF">Directory</font></a><font color="#FFFFFF"> | </font><a href="http://www.pctechbytes.com/downloads/"> <font color="#FFFFFF">Downloads</font></a><font color="#FFFFFF"> | </font> <a href="benchmark.htm"> <font color="#FFFFFF">Benchmark</font></a><font color="#FFFFFF"> | </font> <a href="diagnostic.htm"> <font color="#FFFFFF">Diagnostics</font></a><font color="#FFFFFF"> | </font> <a href="/computer/"> <font color="#FFFFFF">Articles</font></a><font color="#FFFFFF"> | </font> <a href="search.htm"> <font color="#FFFFFF">Search</font></a></font></b></p></td>
+<p align="right"><b><font size="2"><a href="http://www.pctechbytes.net/"><font color="#FFFFFF">Forums</font></a><font color="#FFFFFF"> | </font> <font color="#FFFFCC"> <a href="index.htm"><font color="#FFFFFF">Home</font></a></font><font color="#FFFFFF"> | </font> <a href="sitemap.htm"> <font color="#FFFFFF">Directory</font></a><font color="#FFFFFF"> | </font><a href="http://www.pctechbytes.com/download/"> <font color="#FFFFFF">Downloads</font></a><font color="#FFFFFF"> | </font> <a href="benchmark.htm"> <font color="#FFFFFF">Benchmark</font></a><font color="#FFFFFF"> | </font> <a href="diagnostic.htm"> <font color="#FFFFFF">Diagnostics</font></a><font color="#FFFFFF"> | </font> <a href="/computer/"> <font color="#FFFFFF">Articles</font></a><font color="#FFFFFF"> | </font> <a href="search.htm"> <font color="#FFFFFF">Search</font></a></font></b></p></td>
   </tr>
   <tr>
     <td valign="top" bgcolor="#FFFFFF"><p>&nbsp;</p>
@@ -110,13 +110,23 @@ body {
   </tr>
   <tr>
     <td bgcolor="#5288C9"><p>&nbsp;</p>
-      <p>Copyright PCTechBytes, LLC 2008</p>
+      <p>Copyright PCTechBytes, LLC 2009</p>
       <p>&nbsp; </p></td>
   </tr>
 </tbody></table>
 
 </div>
-
+<!-- Start Quantcast tag -->
+<script type="text/javascript"> 
+_qoptions={
+qacct:"p-feGc4uk9T9dyg"
+};
+</script>
+<script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script>
+<noscript>
+<img src="http://pixel.quantserve.com/pixel/p-feGc4uk9T9dyg.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/>
+</noscript>
+<!-- End Quantcast tag -->
 
 
 
