--- a/b/br/bri/briscoes.co.nz.html
+++ b/b/br/bri/briscoes.co.nz.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the briscoes.co.nz privacy policy that was archived on 2009-05-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090521172214id_/http%3A//www.briscoes.co.nz/privacy-policy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the briscoes.co.nz privacy policy that was archived on 2009-09-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090925111226id_/http%3A//www.briscoes.co.nz/privacy-policy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -8,19 +8,24 @@
 <title>Briscoes - Website Privacy Policy</title>
 <script type="text/javascript" src="/Scripts/mootools.js"></script>
 <script type="text/javascript" src="/Scripts/faq.js"></script>
+<script type="text/javascript" src="/Scripts/jquery.js"></script>
+
 <link rel="stylesheet" href="/css/master.css" type="text/css">
 <link rel="stylesheet" href="/css/content.css" type="text/css">
+<!--[if lte IE 6]>
+<link href="/css/ie6.css" rel="stylesheet" type="text/css">
+<![endif]-->
 <link rel="shortcut icon" href="/images/favicon.ico">
 </head>
 
 <body>
 <form name="ctl03" method="post" action="/privacy-policy.aspx" id="ctl03">
 <div>
-<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUJOTkzNjk4NjQ4ZGRgcuXpa2sVPFuebRs0fA9bqMvhTg==">
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUJOTkzNjk4NjQ4ZGSEtUr6BFLx/R3ScqV+3hrt+1tsew==">
 </div>
 
 
-<script src="/ScriptResource.axd?d=QBFxwZt9elUlmFDYebRJqFOCkIQB9_LBnYZj651pc5SmQMl3FEcx2XRR0h0qyK_ByM2GG3xB8KKQxGgNKygQR2Jq-tN4RqQH2GJm_C_LqOw1&amp;t=633519310640355000" type="text/javascript"></script>
+<script src="/ScriptResource.axd?d=EezulwRenpklX4lKO8knO-CcRCe0nG8zDXQUDfrBZNWLl9vkhOiZSNZ-FhpV3k0qezGClmMvHZzphFpslKt7Onz34gqCOJMxz6kYOPHe5DU1&amp;t=633519310640355000" type="text/javascript"></script>
 	<div id="bgWrapper">
     <div id="borderWrapper">
 <div id="mainContainer">
@@ -47,7 +52,7 @@
 <div class="LeftContent">
 <h2>Privacy Policy </h2>
 
-<h4><span>Privacy Policy</span></h4><p><span>This policy sets out how and when [Briscoe Group Limited] (the "Company", "we", "us" or "our") collects, holds, uses and discloses your personal information.</span></p><p><span>We may modify or amend this policy at any time and for any reason.&nbsp; By using this site you consent to our handling of your personal information in accordance with this policy (as amended from time to time).</span></p><h4><span>Collection</span></h4><p><span>We may collect personal information about you:<br>1.&nbsp;[When you provide information to us directly, for example, by you sending us an email enquiring about information relating to the Company or our products or services.]<br>2.&nbsp;Through your use of this site [and the services and functionality offered through it].</span></p><h4><span>Use</span></h4><p><span>We will only use personal information about you for the following reasons: <br>1.&nbsp;To improve the products and services we offer through this site.<br>2.&nbsp;To respond to your queries.<br>3.&nbsp;To add to our company database so we may inform you of specials, promotions, offers and events via email or post.<br>4.&nbsp;Any other reasons which we may notify at the time the information is collected.</span></p><h4><span>Disclosure</span></h4><p><span>We may share your personal information:<br>1.&nbsp;To our group companies or service providers (e.g. in order to store the information).<br>2.&nbsp;Where the disclosure is in connection with one of the purposes for which the information was collected.<br>3.&nbsp;Where we are required or authorised by law to make disclosure.<br>Except as provided above, we will not share your personal information with any other third parties.&nbsp; We may provide overall statistics about users, site sue, demand for relevant products, services, facilities and information, traffic patterns, and related site information to reputable third parties; however, these statistics will not include any information which personally identifies you.&nbsp; </span></p><h4><span>Retention and Security</span></h4><p><span>We will not hold your personal information for longer than is required for the purpose(s) for which it was collected. </span></p><p><span>We will ensure that security safeguards protect the information and we will take all reasonable steps to ensure that information will not be disclosed to any unauthorised person or organisation.</span></p><h4><span>Access and Correction</span></h4><p><span>We will take all reasonable steps to ensure that personal information held by us is accurate and up-to-date.&nbsp; You are entitled to obtain from us confirmation as to whether or not we hold personal information about you and you are entitled to reasonable access to this information. You may also request:<br>1.&nbsp;That we correct this information if it is inaccurate; and<br>2.&nbsp;That your details do not appear on our database.<br>You can make changes to your personal information by contacting us using the "Contact Us" page on this site, or by calling [our free phone service on 0800 LIVING (0800 548 464)]. </span></p><h4><span>Email Policy </span></h4><p><span>We only email you if you want us to.&nbsp; We do not send unsolicited emails.&nbsp; When you register your email address with us, if you choose to, you go on a list to receive email announcements about products, offers and promotions from us. </span></p><p><span>Every email message we send includes an email address to which you can respond.&nbsp; If at any time you decide you do not want to receive our emails, simply click the unsubscribe link at the bottom of the newsletter.&nbsp; If you unsubscribe you will continue to receive emails specifically related to your online orders.<br><br></span></p>
+<h4><span>Privacy Policy</span></h4><p><span>This policy sets out how and when [Briscoe Group Limited] (the "Company", "we", "us" or "our") collects, holds, uses and discloses your personal information.</span></p><p><span>We may modify or amend this policy at any time and for any reason.&nbsp; By using this site you consent to our handling of your personal information in accordance with this policy (as amended from time to time).</span></p><h4><span>Collection</span></h4><p><span>We may collect personal information about you:<br>1.&nbsp;[When you provide information to us directly, for example, by you sending us an email enquiring about information relating to the Company or our products or services.]<br>2.&nbsp;Through your use of this site [and the services and functionality offered through it].</span></p><h4><span>Use</span></h4><p><span>We will only use personal information about you for the following reasons: <br>1.&nbsp;To improve the products and services we offer through this site.<br>2.&nbsp;To respond to your queries.<br>3.&nbsp;To add to our company database so we may inform you of specials, promotions, offers and events via email or post.<br>4.&nbsp;Any other reasons which we may notify at the time the information is collected.</span></p><h4><span>Disclosure</span></h4><p><span>We may share your personal information:<br>1.&nbsp;To our group companies or service providers (e.g. in order to store the information).<br>2.&nbsp;Where the disclosure is in connection with one of the purposes for which the information was collected.<br>3.&nbsp;Where we are required or authorised by law to make disclosure.<br>Except as provided above, we will not share your personal information with any other third parties.&nbsp; We may provide overall statistics about users, site use, demand for relevant products, services, facilities and information, traffic patterns, and related site information to reputable third parties; however, these statistics will not include any information which personally identifies you.&nbsp; </span></p><h4><span>Retention and Security</span></h4><p><span>We will not hold your personal information for longer than is required for the purpose(s) for which it was collected. </span></p><p><span>We will ensure that security safeguards protect the information and we will take all reasonable steps to ensure that information will not be disclosed to any unauthorised person or organisation.</span></p><h4><span>Access and Correction</span></h4><p><span>We will take all reasonable steps to ensure that personal information held by us is accurate and up-to-date.&nbsp; You are entitled to obtain from us confirmation as to whether or not we hold personal information about you and you are entitled to reasonable access to this information. You may also request:<br>1.&nbsp;That we correct this information if it is inaccurate; and<br>2.&nbsp;That your details do not appear on our database.<br>You can make changes to your personal information by contacting us using the "Contact Us" page on this site, or by calling [our free phone service on 0800 LIVING (0800 548 464)]. </span></p><h4><span>Email Policy </span></h4><p><span>We only email you if you want us to.&nbsp; We do not send unsolicited emails.&nbsp; When you register your email address with us, if you choose to, you go on a list to receive email announcements about products, offers and promotions from us. </span></p><p><span>Every email message we send includes an email address to which you can respond.&nbsp; If at any time you decide you do not want to receive our emails, simply click the unsubscribe link at the bottom of the newsletter.&nbsp; If you unsubscribe you will continue to receive emails specifically related to your online orders.<br><br></span></p>
 </div>
 
 <div class="RightContent">
@@ -85,6 +90,7 @@ Sys.Application.initialize();
 //]]>
 </script>
 </form>
+
 <script type="text/javascript" src="/Scripts/chrisdomroll.js"></script>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
