--- a/a/as/asp/aspspider.com.html
+++ b/a/as/asp/aspspider.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the aspspider.com privacy policy that was archived on 2009-06-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090619065855id_/http%3A//www.aspspider.com/team/Privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the aspspider.com privacy policy that was archived on 2009-09-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090925170612id_/http%3A//www.aspspider.com/team/Privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 		<title>AspSpider Privacy Policy</title>
@@ -14,7 +14,7 @@
 			<table width="100%" border="0" cellpadding="0" cellspacing="0">
 			<tbody><tr>
 				<td>
-					<a href="http://www.AspSpider.com" title="asp.net web hosting Hosting"><img alt="free asp.net web hosting" src="/images/logo/logo.gif" border="0"></a>
+					<a href="http://www.aspspider.com" title="asp.net web hosting Hosting"><img alt="free asp.net web hosting" src="/images/logo/logo.gif" border="0"></a>
 				</td>
 
 				<td align="center" valign="bottom">
@@ -22,10 +22,15 @@
 
 				<td valign="bottom" align="left">
 				    
-				     <br>
-					<!-- 728x90 Leaderboard Ad Tag Start --> 
-					<iframe src="http://ads.aspalliance.com/displayad.aspx?t=13&amp;m=75&amp;guid=2340" height="90" width="728" marginwidth="0" marginheight="0" frameborder="0" scrolling="no"><script type="text/javascript" src="http://ads.aspalliance.com/displayad.aspx?t=13&m=75&target=_parent&js=1"></script></iframe>
-					<!-- 728x90 Leaderboard Ad Tag End -->				
+<script type="text/javascript">
+<!-- 
+lqm_channel=1;
+lqm_publisher=75;
+lqm_zone=51;
+lqm_format=8;
+//-->
+</script>
+<script type="text/javascript" src="http://a.lakequincy.com/s.js"></script>
 					
 					 <br><br>
 					<table cellspacing="0" cellpadding="0" width="100%" border="0">
@@ -35,7 +40,7 @@
 						<div id="menuNav">
 
 							<li>
-							<a href="/cp/" title="ASP.NET Hosting">Control Panel</a>
+							<a href="/cp/Index.aspx" title="ASP.NET Hosting">Control Panel</a>
 							</li>
 							<li>
 							<a href="/qa/" title="ASP.NET Discussion Forums">Forum</a>
@@ -118,10 +123,10 @@ google_ad_height = 600;
 		<td>
 			<font class="v10">Total <a href="/profiles/Members.aspx">
 					members</a>:
-				<span id="MyLeftbar_Statistics1_lbltotal" class="v10b"><font color="#006600">108729</font></span>
+				<span id="MyLeftbar_Statistics1_lbltotal" class="v10b"><font color="#006600">117377</font></span>
 				<br>
 				Average new registrations per day (in last 7 days):
-				<span id="MyLeftbar_Statistics1_lblAverage" class="v10b"><font color="#006600">86</font></span>
+				<span id="MyLeftbar_Statistics1_lblAverage" class="v10b"><font color="#006600">97</font></span>
 				<br>
 				<br>
 				<!--
@@ -147,12 +152,6 @@ google_ad_height = 600;
 			<br>
 			<br>
 			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-
 		</td>
 		<td valign="top">
 			<table width="100%" border="0" cellspacing="0" cellpadding="5" bgcolor="#ffffff">
@@ -166,7 +165,7 @@ google_ad_height = 600;
 					    <table bgcolor="ORANGERED" cellpadding="8" cellspacing="1">
 					    <tbody><tr bgcolor="#ffffcc">					    
 					    <td>
-					        <h3>Play <a href="http://www.SilverlightClub.com" target="_blank" title="Silverlight games"><font color="#ff0000">Silverlight Games</font></a> or <a href="http://www.SilverlightClub.com/apps/" target="_blank"><font color="#9900cc">Submit your Silverlight applications</font></a> <font color="#ff6600">and earn 90% AdSense revenue.</font></h3>
+					        <h3>Want to become a DBA ? <a href="http://www.SqlSpider.com" target="_blank" title="SQL Server training courses"><font color="#ff0000">SQL Server 2008 training courses</font></a> <font color="#9900cc">- by AspSpider team</font></h3>
 					    </td>
 					    </tr>
 					    </tbody></table>
@@ -261,8 +260,7 @@ google_ad_height = 600;
 			transferred business assets.
 			<br>
 			<br>
-			If you have any questions, please write to <a href="mailto:webmaster-1@AspSpider.com?subject=privacy policy">
-				webmaster-1@AspSpider.com</a>.
+			If you have any questions, please write to <a href="/team/ContactUs.aspx">contact us</a>.
 			<br>
 			<br>
 			
@@ -279,6 +277,19 @@ lqm_format=2;
 <br><br>
 
 <br><br>
+</td>
+<td valign="top">
+
+<script type="text/javascript">
+<!-- 
+lqm_channel=1;
+lqm_publisher=75;
+lqm_zone=51;
+lqm_format=18;
+//-->
+</script>
+<script type="text/javascript" src="http://a.lakequincy.com/s.js"></script>
+
 </td>
 </tr>
 <tr>
@@ -298,24 +309,27 @@ lqm_format=2;
 
 			<center>
 			
-			<a href="/Links.aspx" class="v11">Partners</a> &nbsp; 
+			<a href="/ads/Advertise.aspx" class="v11">Advertise</a> &nbsp; 
 			<a href="/team/Privacy.aspx" class="v11">Privacy Policy</a> &nbsp; 
 			<a href="/team/Terms.aspx" class="v11">Terms of use</a> &nbsp; 
 			<a href="/team/ContactUs.aspx" class="v11">Contact Us</a>
 			
 			<br><br>
 			<font class="v11">
-			SpiderWorks Technologies.
+			SpiderWorks Technologies Pvt Ltd.
 			<br>All Rights Reserved.
 			</font>
 <br><br><br>
 
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
 <script type="text/javascript">
-_uacct = "UA-250871-3";
-urchinTracker();
-</script>
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-4428394-12");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 
 
 </center>
