--- a/e/eb/ebo/eboobstore.com.html
+++ b/e/eb/ebo/eboobstore.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the eboobstore.com privacy policy that was archived on 2009-06-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090627130556id_/http%3A//www.eboobstore.com/home/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the eboobstore.com privacy policy that was archived on 2009-09-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090925181850id_/http%3A//www.eboobstore.com/home/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 <title>EboobStore - Privacy &amp; Security</title>
@@ -160,7 +160,7 @@ function MM_swapImage() { //v3.0
 				<table width="139" border="0" cellspacing="0" cellpadding="0">
 					<tbody><tr>
 						<td class="leftnav">
-							<a href="http://www.eboobstore.com/images/main/summer2009catalog.pdf" target="_blank">Online Catalog</a>
+							<a href="http://www.mygazines.com/issue/2741" target="_blank">Online Catalog</a>
 						</td>
 					</tr>				
 					<tr> 
@@ -176,11 +176,6 @@ function MM_swapImage() { //v3.0
 					<tr> 
 						<td class="leftnav">
 							<a href="http://www.eboobstore.com/offers/justreduced">Just Reduced</a>
-						</td>
-					</tr> 
-					<tr> 
-						<td class="leftnav">
-							<a href="http://www.eboobstore.com/offers/clearance">Clearance Sale</a>
 						</td>
 					</tr> 
 				</tbody></table>
@@ -213,7 +208,7 @@ function MM_swapImage() { //v3.0
 					}
 					var choice = pickRandom(bc);
 					document.write(banner[choice]);
-					--></script><a href="http://www.eboobstore.com/sendto/action/bootyliciousmag/w"><img src="/images/main/leftnav_bootyliciousmag.jpg" alt="bootyliciousmag" width="156" height="312" border="0"></a></td>
+					--></script><a href="http://www.eboobstore.com/sendto/action/scoreland/w"><img src="/images/main/leftnav_scoreland.jpg" alt="scoreland" width="156" height="312" border="0"></a></td>
 		</tr> 
 		<tr> 
 			<td colspan="2"><img src="/images/main/bot_final.gif" alt="Visit Scoreland.com"></td>
@@ -317,7 +312,7 @@ function MM_swapImage() { //v3.0
 </div>
 <div align="center" class="section" style="padding: 5px">
   <a href="http://www.beascoremodel.com" target="_blank"><font class="section">Be a SCORE Model</font></a> | 
-  <a href="http://secure.score-cash.com/strack/MTIzMDY5OC42NC41MC41MC4xLjAuMC4w/webref/3/1/" target="_blank"><font class="section">SCORE Affiliate Program</font></a>
+  <a href="http://secure.score-cash.com/strack/MTAwNC42NC41MC41MC4yOS4wLjAuMA/webref/3/1/" target="_blank"><font class="section">SCORE Affiliate Program</font></a>
 </div>
 <div align="center" class="section" style="padding: 5px">
   <a href="http://www.eboobstore.com/store/2257.php" target="_blank">18 U.S.C. 2257 Record-Keeping Requirements Compliance Statement</a>
