--- a/b/br/bro/brother-usa.com.html
+++ b/b/br/bro/brother-usa.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the brother-usa.com privacy policy that was archived on 2009-05-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090506050402id_/http%3A//www.brother-usa.com/disclaimer.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the brother-usa.com privacy policy that was archived on 2009-09-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090926090825id_/http%3A//www.brother-usa.com/disclaimer.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head id="ctl00_Head1"><title>
 	Brother International - Privacy Statement
@@ -43,10 +43,10 @@
             Our Products</a> </li>
         <li><a href="http://www.brother-usa.com/Brother.aspx">
             About Us</a> </li>
-        <li><a href="http://www.brother-usa.com/Support/?WT.cg_n=Support">
+        <li><a href="http://www.brother-usa.com/Support/">
             Contact Us</a> </li>
         
-        <li><a href="https://www.brother-usa.com/MyAccount/?WT.cg_n=Support&amp;WT.cg_s=MyAccount">
+        <li><a href="https://www.brother-usa.com/MyAccount/">
             My Account</a> </li>
     </ul>
 </div>
@@ -102,13 +102,13 @@
             <span class="NavHeaderText">To Support</span>
         </h3>
         <ul>
-            <li><a href="http://www.brother-usa.com/Support/?WT.cg_n=Support">Support Center</a></li>
-            <li><a href="https://www.brother-usa.com/Registermybrother/?WT.cg_n=Support&amp;WT.cg_s=ProdReg">Product Registration</a></li>
-            <li><a href="http://www.brother-usa.com/service/?WT.cg_n=Support&amp;WT.cg_s=Service">Service Center Locator</a></li>
-            <li><a href="http://www.brother-usa.com/downloads/?WT.cg_n=Support&amp;WT.cg_s=Downloads">Downloads</a></li>
-            <li><a href="http://www.brother-usa.com/FAQs/?WT.cg_n=Support&amp;WT.cg_s=FAQ">FAQs</a></li>
-            <li><a href="http://www.brother-usa.com/Manuals/?WT.cg_n=Support&amp;WT.cg_s=Manuals">Manuals</a></li>
-            <li><a href="http://www.brother-usa.com/CreativeCenter" onclick="dcsMultiTrack('DCS.dcssip', 'www.brother.com', 'DCS.dcsuri','/creativecenter-InteriorProductLeftNav/', 'WT.ti','Brother Creative Center From Interior Product Left Nav')">Creative Center</a></li>
+            <li><a href="http://www.brother-usa.com/Support/">Support Center</a></li>
+            <li><a href="https://www.brother-usa.com/Registermybrother/">Product Registration</a></li>
+            <li><a href="http://www.brother-usa.com/service/">Service Center Locator</a></li>
+            <li><a href="http://www.brother-usa.com/downloads/">Downloads</a></li>
+            <li><a href="http://www.brother-usa.com/FAQs/">FAQs</a></li>
+            <li><a href="http://www.brother-usa.com/Manuals/">Manuals</a></li>
+            <li><a href="http://www.brother-usa.com/CreativeCenter/InteriorProductLeftNav.aspx">Creative Center</a></li>
         </ul>
     </div>
 
@@ -397,13 +397,39 @@ pageTracker._trackPageview();
 
 <!-- End SearchForce tracking code -->
 
-            <input type="hidden" name="ctl00$hfSName" id="ctl00_hfSName" value="NJISBIC1">
+
+<!-- START OF SmartSource Data Collector TAG -->
+<!-- Copyright (c) 1996-2009 WebTrends Inc.  All rights reserved. -->
+<!-- Version: 8.6.2 -->
+<!-- Tag Builder Version: 3.0  -->
+<!-- Created: 5/13/2009 7:04:53 PM -->
+<script src="/LocalScripts/TagBuilderWebTrends.js" type="text/javascript"></script>
+<!-- ----------------------------------------------------------------------------------- -->
+<!-- Warning: The two script blocks below must remain inline. Moving them to an external -->
+<!-- JavaScript include file can cause serious problems with cross-domain tracking.      -->
+<!-- ----------------------------------------------------------------------------------- -->
+<script type="text/javascript">
+//<![CDATA[
+var _tag=new WebTrends();
+_tag.dcsGetId();
+//]]>>
+</script><script type="text/javascript" src="https://statse.webtrendslive.com/dcssho9ey5twkfrvzxus561vr_7z6l/wtid.js"></script>
+<script type="text/javascript">
+//<![CDATA[
+// Add custom parameters here.
+//_tag.DCSext.param_name=param_value;
+_tag.dcsCollect();
+//]]>>
+</script>
+<noscript>
+<div><img alt="DCSIMG" id="DCSIMG" width="1" height="1" src="http://statse.webtrendslive.com/dcssho9ey5twkfrvzxus561vr_7z6l/njs.gif?dcsuri=/nojavascript&amp;WT.js=No&amp;WT.tv=8.6.2"/></div>
+</noscript>
+<!-- END OF SmartSource Data Collector TAG -->
+
+            <input type="hidden" name="ctl00$hfSName" id="ctl00_hfSName" value="NJISBIC2">
         </form>
     </div>
-     <script src="/Localscripts/USAWebTrends.js" type="text/javascript"></script>
-    <noscript>
-        <img alt="" name="DCSIMG" style="width: 1px; height: 1px;" src="http://statse.webtrendslive.com/dcssho9ey5twkfrvzxus561vr_7z6l/njs.gif?dcsuri=/nojavascript&amp;WT.js=No&amp;WT.tv=8.0.0" />
-    </noscript>
+    
   
 
 
