cinefolks.com (archived on 2009-09-26)
{
  "alexa_rank": 25901,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 2483,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.64,
  "homepage_snapshot_redirected_domain": "cinefolks.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20091001064117id_/http://cinefolks.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20091001064117id_/http%3A//cinefolks.com",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "cinefolks.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090926202922id_/http%3A//cinefolks.com/docs/privacypolicy.php",
  "policy_title": "Watch Latest Online Telugu Movies - cinefolks.com",
  "policy_url": "cinefolks.com/docs/privacypolicy.php",
  "sha1": "87ccbb671fb0dcc691e4b94772ccc9d332f61ebd",
  "simhash": 7419605742565778706,
  "simhash_updated": false,
  "site_hostname": "cinefolks.com",
  "site_url": "http://cinefolks.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20090926202922",
  "word_count": 383,
  "year": 2009
}

--- a/c/ci/cin/cinefolks.com.html
+++ b/c/ci/cin/cinefolks.com.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the cinefolks.com privacy policy that was archived on 2009-05-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090530000842id_/http%3A//cinefolks.com/docs/privacypolicy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cinefolks.com privacy policy that was archived on 2009-09-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090926202922id_/http%3A//cinefolks.com/docs/privacypolicy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Watch Latest Online Telugu Movies - cinefolks.com</title>
 <meta name="Description" content="Watch Telugu Movies with high Clarity on Fast streaming Server">
-<meta name="keywords" content="Billa, Pourudu, Budhimanthudu, Manorama 2009, Aakasamantha, Ready, Mestry, Sivaji, Ammailu Abbailu, Vaaliddari Vayasu Padahare, Drona, Kantri, Ek Police, Dongala Bandi, Brahmanandam Drama Company, Raana, Konchem Kothaga, Sowryam, Krishna, Gentleman">
+<meta name="keywords" content="Samrajyam, Aakasamantha, Aa Intlo, Gopi Gopika Godavari, Adhinetha, Billa, Pourudu, Budhimanthudu, Manorama 2009, Ready, Mestry, Sivaji, Ammailu Abbailu, Vaaliddari Vayasu Padahare, Drona, Kantri, Ek Police, Dongala Bandi, Brahmanandam Drama Company, Raana">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link href="/includes_main/styles/styles.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="http://cinefolks.com/includes_main/scripts/tellafriend/css/floating-window.css" media="screen" type="text/css">
@@ -47,7 +47,7 @@ var box = document.forms['gsearch'].q;
                 <td align="center"><a href="http://cinefolks.com"><img src="http://cinefolks.com/images/logo.gif" alt="cinefolks.com" width="263" height="77" border="0"></a></td>
               </tr>
               <tr>
-                <td height="36" align="center"><strong>Fri May 29 | 19:08:41 | 2009</strong></td>
+                <td height="36" align="center"><strong>Sat Sep 26 | 15:29:21 | 2009</strong></td>
               </tr>
             </tbody></table></td>
 
@@ -299,7 +299,7 @@ document.write('IPT SRC="' + adserver + '/jserver/acc_random=' + random + target
 document.write('</SCR');
 document.write('IPT>');
 // End Hide -->
-</script><script src="http://ads.ozonemedia.co.in/jserver/acc_random=98276985/SITE=CINEFOLKS/AREA=ENTERTAINMENT/AAMSZ=728X90/pageid=68598870"></script>
+</script><script src="http://ads.ozonemedia.co.in/jserver/acc_random=60554301/SITE=CINEFOLKS/AREA=ENTERTAINMENT/AAMSZ=728X90/pageid=38301151"></script>
 <noscript>
 <A HREF="http://ads.ozonemedia.co.in/adclick/SITE=CINEFOLKS/AREA=ENTERTAINMENT/AAMSZ=728X90/pageid=1">
 <IMG SRC="http://ads.ozonemedia.co.in/nserver/SITE=CINEFOLKS/AREA=ENTERTAINMENT/AAMSZ=728X90/pageid=1"></A>
