brightspyre.com (archived on 2009-09-28)
{
  "alexa_rank": 50785,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 6786,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.08,
  "homepage_snapshot_redirected_domain": "brightspyre.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20091001045616id_/http://www.brightspyre.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20091001045616id_/http%3A//brightspyre.com",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "brightspyre.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090928130959id_/http%3A//www.brightspyre.com/policy/index.php",
  "policy_title": "Contact Us",
  "policy_url": "brightspyre.com/policy/index.php",
  "sha1": "0382d8ab537124e6a6e8ea6e4c23700587449a21",
  "simhash": 4716280799969216758,
  "simhash_updated": false,
  "site_hostname": "brightspyre.com",
  "site_url": "http://brightspyre.com",
  "smog": 13.13,
  "strict_updated": false,
  "timestamp": "20090928130959",
  "word_count": 1066,
  "year": 2009
}

--- a/b/br/bri/brightspyre.com.html
+++ b/b/br/bri/brightspyre.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the brightspyre.com privacy policy that was archived on 2009-04-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090412023155id_/http%3A//www.brightspyre.com/policy/index.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the brightspyre.com privacy policy that was archived on 2009-09-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090928130959id_/http%3A//www.brightspyre.com/policy/index.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Contact Us </title><link href="http://feeds.feedburner.com/brightspyre/job" rel="alternate" type="application/rss+xml" title="RSS Feed  for  jobs in Pakistan">
@@ -25,9 +25,9 @@
 
     <tbody><tr align="right">
 
-<td colspan="3" background="/images3/top_menu.gif" class="edgeLinks"><img src="/images3/spacer_transparent.gif" width="1" height="23"><a href="/sales/index.php" class="edgeLinks" title="Sales / Services">Sales / Services |</a><a href="/feedback/faq.php" class="edgeLinks" title="FAQ/Help">FAQ/Help</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/policy/index.php" class="edgeLinks" title="Privacy Policy">Privacy Policy</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/feedback/index.php" class="edgeLinks" title="Feedback">Feedback</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://blogs.brightspyre.com/" class="edgeLinks" target="_blank" title="Blogs">Blogs</a>&nbsp;&nbsp;|&nbsp;&nbsp; 
+<td colspan="3" background="/images3/top_menu.gif" class="edgeLinks"><img src="/images3/spacer_transparent.gif" width="1" height="23"><a href="/sales/index.php" class="edgeLinks" title="Sales / Services">Sales / Services&nbsp;&nbsp;|&nbsp;&nbsp;</a><a href="/feedback/faq.php" class="edgeLinks" title="FAQ/Help">FAQ / Help</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/policy/index.php" class="edgeLinks" title="Privacy Policy">Privacy Policy</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/feedback/index.php" class="edgeLinks" title="Feedback">Feedback</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://blogs.brightspyre.com/" class="edgeLinks" target="_blank" title="Blogs">Blogs</a>&nbsp;&nbsp;|&nbsp;&nbsp; 
 
-        <a href="/contact/index.php" title="Contact" class="edgeLinks">Contact</a>&nbsp;&nbsp;|&nbsp;&nbsp; 
+        <a href="/contact/index.php" class="edgeLinks" title="Contact">Contact</a>&nbsp;&nbsp;|&nbsp;&nbsp; 
 
         <a href="http://blogs.brightspyre.com/search/label/news" class="edgeLinks" title="News" target="_blank">News</a>&nbsp;&nbsp;</td>
 
@@ -41,7 +41,7 @@
 
     <tr> 
 
-      <td width="201"><a href="http://www.brightspyre.com" title="Jobs in Pakistan"><img src="/images3/BrightSpyre_logo.gif" alt="Jobs in Pakistan" title="Jobs in Pakistan" border="0"></a></td>
+      <td width="201"><a href="http://www.brightspyre.com" title="Jobs in Pakistan"><img style="padding-left:20px;padding-bottom:5px" width="153" height="79" src="/images3/BrightSpyre_logo.gif" alt="Jobs in Pakistan" title="Jobs in Pakistan" border="0"></a></td>
 
       <td width="579" colspan="2" align="center" valign="middle"> 
 
@@ -83,7 +83,7 @@
 
    document.write ("'><\/scr"+"ipt>");
 
-//]]>--></script><script type="text/javascript" src="https://ads.brightspyre.com/www/delivery/ajs.php?zoneid=5&amp;cb=39162584163&amp;loc=https%3A//web.archive.org/web/20090412023155id_/http%253A//www.brightspyre.com/policy/index.php"></script><noscript><a href='http://ads.brightspyre.com/www/delivery/ck.php?n=a561e2ca&amp;cb=INSERT_RANDOM_NUMBER_HERE' target='_blank'><img src='http://ads.brightspyre.com/www/delivery/avw.php?zoneid=5&amp;n=a561e2ca' border='0' alt='' /></a></noscript>
+//]]>--></script><script type="text/javascript" src="https://ads.brightspyre.com/www/delivery/ajs.php?zoneid=5&amp;cb=4424332400&amp;loc=https%3A//web.archive.org/web/20090928130959id_/http%253A//www.brightspyre.com/policy/index.php"></script><noscript><a href='http://ads.brightspyre.com/www/delivery/ck.php?n=a561e2ca&amp;cb=INSERT_RANDOM_NUMBER_HERE' target='_blank'><img src='http://ads.brightspyre.com/www/delivery/avw.php?zoneid=5&amp;n=a561e2ca' border='0' alt='' /></a></noscript>
 
 
 
@@ -123,7 +123,7 @@
 
           <tbody><tr> 
 
-            <td align="right"><font color="#FFFFFF" size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font><strong><font size="1" face="Verdana, Arial, Helvetica, sans-serif"><font color="#FFFFFF">Registered Users</font>&nbsp;<font color="#FFFF00">552,638</font>&nbsp;­&nbsp;<font color="#FFFFFF">Posted Jobs</font>&nbsp;<font color="#FFFF00">15,659</font></font></strong>&nbsp;&nbsp;&nbsp;</td>
+            <td align="right"><font color="#FFFFFF" size="1" face="Verdana, Arial, Helvetica, sans-serif">&nbsp;</font><strong><font size="1" face="Verdana, Arial, Helvetica, sans-serif"><font color="#FFFFFF">Registered Users</font>&nbsp;<font color="#FFFF00">627,432</font>&nbsp;­&nbsp;<font color="#FFFFFF">Posted Jobs</font>&nbsp;<font color="#FFFF00">16,635</font></font></strong>&nbsp;&nbsp;&nbsp;</td>
 
           </tr>
 
