pressandjournal.co.uk (archived on 2009-09-28)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 8000,
  "classifier_probability": 0.88,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.09,
  "homepage_snapshot_redirected_domain": "pressandjournal.co.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090826091241id_/http://www.pressandjournal.co.uk/Default.aspx?UserKey=",
  "homepage_snapshot_url": "https://web.archive.org/web/20091029132640id_/http%3A//pressandjournal.co.uk",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "pressandjournal.co.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090928220946id_/http%3A//www.pressandjournal.co.uk/Privacy.aspx",
  "policy_title": "Site Privacy Policy and Conditions of Use",
  "policy_url": "pressandjournal.co.uk/Privacy.aspx",
  "sha1": "5137fe33587cd3374d646bc3b3736e19f5615a11",
  "simhash": 918049594598426532,
  "simhash_updated": true,
  "site_hostname": "pressandjournal.co.uk",
  "site_url": "http://pressandjournal.co.uk",
  "smog": 15.56,
  "strict_updated": true,
  "timestamp": "20090928220946",
  "word_count": 1381,
  "year": 2009
}

--- a/p/pr/pre/pressandjournal.co.uk.html
+++ b/p/pr/pre/pressandjournal.co.uk.html
@@ -1,14 +1,11 @@
-<!--The following is the downloaded HTML source of the pressandjournal.co.uk privacy policy that was archived on 2009-06-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090626224547id_/http%3A//www.pressandjournal.co.uk/Privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pressandjournal.co.uk privacy policy that was archived on 2009-09-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090928220946id_/http%3A//www.pressandjournal.co.uk/Privacy.aspx) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><title>
-	Site Privacy Policy and Conditions of Use
-</title><base id="ctl00_sitebase" href="http://www.pressandjournal.co.uk/">
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><base id="ctl00_sitebase" href="http://www.pressandjournal.co.uk/">
 <script language="JavaScript1.1" type="text/javascript">ns_loadingtime1=(new Date()).getTime()</script>
-<script type="text/javascript">
+<!-- Begin Sitestat OnClick v1.0 Copyright (c) 2001-2007 Nedstat B.V. All rights reserved.-->
+<script type="text/javascript" language="javascript">
 <!--
-
 function ns_onclick (a, url, name, type, winopt){
 var ns_l="http://uk.sitestat.com/dct/pressandjournal/s?";
 ns_l+=name;ns_l+='&ns_type='+type+'&ns_action=view';
@@ -18,20 +15,19 @@ ns_0=ns_0.substring(ns_0.lastIndexOf('/'),0);
 if (ns_0.length>0)ns_l+='&amp;ns_referrer='+escape(ns_0);
 winopt=winopt||"";var
 target=(a&&a.target&&a.target!="")?(a.target.substring(0,1)=="_")?a.target.substring(1):a.target:"self";
-var ns_i=new
-Image();if(target&&url){if(window[target]){window.ns_softclick_time
-r=function(target,url)
+var ns_i=new Image();if(target&&url){if(window[target]){window.ns_softclick_timer=function(target,url)
 {return function(){ns_i.onload=ns_i.onerror=function(){return;};
 window[((window[target])?target:"self")].location.href=url;}}(target,url);
 window.setTimeout('ns_softclick_timer()',5000);ns_i.onload=ns_i.onerror=window.ns_softclick_timer;}else{
-window.open(url,target,winopt);}}ns_i.src=ns_l;return false;}
-
-//-->
+window.open(url,target,winopt);}}ns_i.src=ns_l;return false;} //-->
 </script>
+<!-- End Sitestat code -->
 
 <link rel="stylesheet" type="text/css" href="css/pj-style.css" media="screen"><link rel="stylesheet" type="text/css" href="css/common.css" media="screen"><link rel="stylesheet" type="text/css" href="css/pj-print.css" media="print">
 <script type="text/javascript" src="scripts/functions.js"></script>
-<link rel="Shortcut Icon" href="images/favicon.ico" type="image/x-icon"></head>
+<link rel="Shortcut Icon" href="images/favicon.ico" type="image/x-icon"><title>
+	Site Privacy Policy and Conditions of Use
+</title></head>
 
 <body onload="getDate()">
 <div id="home">
@@ -146,7 +142,7 @@ document.write('<script language="javascript" src="http://ad.uk.doubleclick.net/
 
 
 
-</script><script language="javascript" src="http://ad.uk.doubleclick.net/adj/pj_news_site;sz=728x90;tile=1;dcopt=ist;ord=6457660472350282?" type="text/javascript"></script>
+</script><script language="javascript" src="http://ad.uk.doubleclick.net/adj/pj_news_site;sz=728x90;tile=1;dcopt=ist;ord=1252788291323472.2?" type="text/javascript"></script>
 
 <noscript>
 <a href="http://ad.uk.doubleclick.net/jump/pj_news_site;sz=728x90;tile=1;ord=123456789?" target="_blank">
@@ -275,8 +271,8 @@ window.setInterval(rotateFrontPage, 3000);
 <li><a href="http://familyannouncements.ajl.co.uk">Family Announcements</a></li>
 <li><a href="http://dating.ajl.co.uk">Dating</a></li>
 <li><a href="http://bookadsonline.ajl.co.uk/book/step_1.php?siteid=3&amp;sid=" target="_blank">Book an Advert</a></li>
-<li><a href="http://www.ajlreadertravel.co.uk" target="_blank">Reader Travel</a></li>
-<li><a href="http://www.ajlcalendars.co.uk" target="_blank">Scottish Gifts</a></li>
+<li><a href="http://www.ajlreadertravel.co.uk/Travel/Default.aspx?id=5&amp;mid=5" target="_blank">Reader Travel</a></li>
+<li><a href="http://www.ajlcalendars.co.uk" target="_blank">Press &amp; Journal Shop</a></li>
 <li><a href="http://www.ajlphotosales.co.uk">Photo Sales</a></li>
 </ul>
 
@@ -357,7 +353,7 @@ window.setInterval(rotateFrontPage, 3000);
 
 <div id="Ads">
 <div class="InternalAd"><a href="http://bookadsonline.ajl.co.uk/book/step_1.php?siteid=3&amp;sid=" id="ctl00_ctl03_AdvertLink" onclick="ns_onclick (this, '', topCode + '.onclick.174x150_BookOnline.gif', 'clickout'); return false;"><img id="ctl00_ctl03_AdvertImage" src="Advertising/174x150_BookOnline.gif" border="0"></a></div>
-<div class="InternalAd"><a href="http://www.pressandjournal.co.uk/" id="ctl00_ctl04_AdvertLink" onclick="ns_onclick (this, '', topCode + '.onclick.yourlife copy.gif', 'clickout'); return false;"><img id="ctl00_ctl04_AdvertImage" src="Advertising/yourlife%20copy.gif" border="0"></a></div>
+<div class="InternalAd"><a href="http://www.pressandjournal.co.uk/" id="ctl00_ctl04_AdvertLink" onclick="ns_onclick (this, '', topCode + '.onclick.yourhome.gif', 'clickout'); return false;"><img id="ctl00_ctl04_AdvertImage" src="Advertising/yourhome.gif" border="0"></a></div>
 </div>
 
 <div id="skyscraperAd">
@@ -367,7 +363,7 @@ window.setInterval(rotateFrontPage, 3000);
 <script language="JavaScript" type="text/javascript">
 ord = (typeof(ord)!='undefined') ? ord : Math.random()*10000000000000000;
 document.write('<script language="javascript" src="http://ad.uk.doubleclick.net/adj/pj_news_site' + zone + ';sz=120x600;tile=2;ord=' + ord + '?" type="text/javascript"></scr' + 'ipt>');
-</script><script language="javascript" src="http://ad.uk.doubleclick.net/adj/pj_news_site;sz=120x600;tile=2;ord=6457660472350282?" type="text/javascript"></script>
+</script><script language="javascript" src="http://ad.uk.doubleclick.net/adj/pj_news_site;sz=120x600;tile=2;ord=1252788291323472.2?" type="text/javascript"></script>
 
 <noscript>
 <a href="http://ad.uk.doubleclick.net/jump/pj_news_site;sz=120x600;tile=2;ord=123456789?" target="_blank">
@@ -379,7 +375,7 @@ document.write('<script language="javascript" src="http://ad.uk.doubleclick.net/
 <!-- End ad tag -->
 </div>
 
-<a href="http://www.pressandjournal.xwrd.co.uk/doublexword.asp" id="ctl00_ctl05_AdvertLink" onclick="ns_onclick (this, '', topCode + '.onclick.crosswords.jpg', 'clickout'); return false;"><img id="ctl00_ctl05_AdvertImage" src="Advertising/crosswords.jpg" alt="Crossword" border="0"></a>
+<a href="http://www.pressandjournal.co.uk/clipsearch" id="ctl00_ctl05_AdvertLink" onclick="ns_onclick (this, '', topCode + '.onclick.web-Clipsearch.gif', 'clickout'); return false;"><img id="ctl00_ctl05_AdvertImage" src="Advertising/web-Clipsearch.gif" alt="Clipsearch" border="0"></a>
 
 <!-- SWT: Added Adsense 05/02/09 -->
 <script type="text/javascript"><!--
