smartkiddies.com.au (archived on 2009-09-29)
{
  "alexa_rank": 97152,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 2854,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.56,
  "homepage_snapshot_redirected_domain": "smartkiddies.com.au",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20091013035412id_/http://www.smartkiddies.com.au/",
  "homepage_snapshot_url": "https://web.archive.org/web/20091013035412id_/http%3A//smartkiddies.com.au",
  "interval": "2009_B",
  "link_text": "privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "smartkiddies.com.au",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090929133232id_/http%3A//www.smartkiddies.com.au/learn-maths/privacy-policy",
  "policy_title": "Privacy policy of Smartkiddies maths",
  "policy_url": "smartkiddies.com.au/learn-maths/privacy-policy",
  "sha1": "0579bdfcea121040a03686f0f77d5d3478339cd1",
  "simhash": 9608949728530330940,
  "simhash_updated": false,
  "site_hostname": "smartkiddies.com.au",
  "site_url": "http://smartkiddies.com.au",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20090929133232",
  "word_count": 431,
  "year": 2009
}

--- a/s/sm/sma/smartkiddies.com.au.html
+++ b/s/sm/sma/smartkiddies.com.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the smartkiddies.com.au privacy policy that was archived on 2009-05-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090520183129id_/http%3A//www.smartkiddies.com.au/learn-maths/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the smartkiddies.com.au privacy policy that was archived on 2009-09-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090929133232id_/http%3A//www.smartkiddies.com.au/learn-maths/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-au" lang="en-au"><head>  
   <title>Privacy policy of Smartkiddies maths </title>  
@@ -17,6 +17,7 @@
   <meta name="geo.country" content="AU">
   <meta name="geo.placename" content="Smartkiddies Mathematics Australia">
   <link rel="stylesheet" href="http://image.smartkiddies.com/styles/style.css" type="text/css">
+  <script type="text/javascript" src="http://image.smartkiddies.com/scripts/swfobject.js"></script>
 </head>
 <body>				
   <div class="header-box">   
@@ -26,17 +27,18 @@
     username <input type="text" name="sign-in-username"><br>
     password <input type="password" name="sign-in-password"><br>
     <input type="submit" class="button" value="login">
-    <a href="http://www.smartkiddies.com.au/learn-maths/packages" title="Sign up to maths lessons">sign up</a> -
+    <a href="/learn-maths/sign-up" title="Sign up to maths lessons">sign up</a> -
     <a href="http://www.smartkiddies.com.au/learn-maths/contact-smartkiddies" title="Help with Smartkiddies maths">help</a>
   </form>
               
     </div>
-    <div class="main-links-box">
-      <a href="http://www.smartkiddies.com.au/" title="Smartkiddies Maths Home">HOME</a>
-      <a class="pi" href="http://www.smartkiddies.com.au/learn-maths/school-teachers" title="School teachers">TEACHERS</a>
-      <a class="gr" href="http://www.smartkiddies.com.au/learn-maths/parents-homework-help" title="Parents mathematics homework help">PARENTS</a>
-      <a class="or" href="http://www.smartkiddies.com.au/learn-maths/testimonials-recommendations" title="Testimonials and recommendations of maths lessons">TESTIMONIALS</a>
-      <a class="pu" href="http://www.smartkiddies.com.au/learn-maths/curriculum-maths" title="Mathematics curriculum">CURRICULUM</a>
+    <div class="main-links-box" style="padding-left:80px;width:900px;">
+      <a href="/" title="Learn Maths">HOME</a>
+      <a class="bl" href="/student" title="Primary school students mathematics system">STUDENTS</a>
+      <a class="gr" href="/parent" title="Parents mathematics system">PARENTS</a>
+      <a class="pi" href="/teacher" title="School teachers mathematics system">TEACHERS</a>
+      <a class="or" href="/homeschooler" title="Homeschool mathematics system">HOMESCHOOL</a>
+      <a class="pu" href="/tutor" title="Tutor mathematics system">TUTOR</a>
     </div>
   </div>      
   <div class="main-links-box-shadow"></div>
@@ -110,14 +112,15 @@
       <span>
       ACN 127 983 886 - Smartkiddies Pty Ltd -
       Level 20, Tower A, Zenith Centre 821 Pacific Highway Chatswood NSW 2067 Australia
+      - PH:(02) 4284 6501
       </span>
     </div>  
-    <div class="sitemap-footer">
+      <div class="sitemap-footer">
     Smartkiddies sitemap<br>
     <ul class="left">
-      <li><a href="/full-access/lessons">Free Trial</a></li>
-      <li><a href="/learn-maths/parents-homework-help">Parents Sign up</a></li>
-      <li><a href="/learn-maths/school-teachers">Teachers Sign up</a></li>
+      <li><a href="/parent/step-1">Free Trial</a></li>
+      <li><a href="/parent">Parents Sign up</a></li>
+      <li><a href="/teacher">Teachers Sign up</a></li>
       <li><a href="/mathethon">School Fundraising</a></li>
       <li><a href="/learn-maths/testimonials-recommendations">Testimonials</a></li>
       <li><a href="/learn-maths/curriculum-maths-australia">Curriculum</a></li>
@@ -167,7 +170,7 @@
     <br class="clear">
   </div>
   <script src="http://image.smartkiddies.com/scripts/script.js" type="text/javascript"></script>  
-<script type="text/javascript">
+  <script type="text/javascript">
   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
   document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
