allfinancialforms.com (archived on 2009-09-30)
{
  "alexa_rank": 384549,
  "analysis_subcorpus": true,
  "categories": "business;education;shopping",
  "char_count": 1695,
  "classifier_probability": 0.77,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.42,
  "homepage_snapshot_redirected_domain": "allfinancialforms.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090926170413id_/http://www.allfinancialforms.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090926170413id_/http%3A//allfinancialforms.com",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "allfinancialforms.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090930174237id_/http%3A//www.allfinancialforms.com/privacy.html",
  "policy_title": "Our Privacy policy - All Financial Forms",
  "policy_url": "allfinancialforms.com/privacy.html",
  "sha1": "e579d71dd865a99f4b2b2f55e0dd4df4b1214929",
  "simhash": 16453659629645823844,
  "simhash_updated": true,
  "site_hostname": "allfinancialforms.com",
  "site_url": "http://allfinancialforms.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20090930174237",
  "word_count": 274,
  "year": 2009
}

--- a/a/al/all/allfinancialforms.com.html
+++ b/a/al/all/allfinancialforms.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the allfinancialforms.com privacy policy that was archived on 2009-05-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090520082731id_/http%3A//www.allfinancialforms.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the allfinancialforms.com privacy policy that was archived on 2009-09-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090930174237id_/http%3A//www.allfinancialforms.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 <title>Our Privacy policy - All Financial Forms</title>
@@ -108,7 +108,7 @@ a.varlink { text-decoration:none; }
 <br>
 
 <!--<div class="barblock">
-<div class="barhead">Personal Finance News</div>&bull;&nbsp;<a href=http://rss.cnn.com/~r/rss/money_pf/~3/hTAxMfH-0F8/index.htm class='rsslinks' rel='nofollow' target='_blank'>How to solve the financial crisis</a><br />&bull;&nbsp;<a href=http://rss.cnn.com/~r/rss/money_pf/~3/j64ATPG7Mzk/index.html class='rsslinks' rel='nofollow' target='_blank'>New: Check your financial health</a><br />&bull;&nbsp;<a href=http://rss.cnn.com/~r/rss/money_pf/~3/a5BlwOn4OlU/index.htm class='rsslinks' rel='nofollow' target='_blank'>5 questions to answer before you die</a><br />&bull;&nbsp;<a href=http://rss.cnn.com/~r/rss/money_pf/~3/-lyrJh_W_6g/index.htm class='rsslinks' rel='nofollow' target='_blank'>A fund by any other name</a><br />&bull;&nbsp;<a href=http://rss.cnn.com/~r/rss/money_pf/~3/MT6c0MLAgM8/index.htm class='rsslinks' rel='nofollow' target='_blank'>Topsy-turvy times for mutual funds</a><br />                    </div>-->
+<div class="barhead">Personal Finance News</div>&bull;&nbsp;<a href=http://rss.cnn.com/~r/rss/money_pf/~3/UTYz4yxi9Lg/index.htm class='rsslinks' rel='nofollow' target='_blank'>Should you hire a career coach?</a><br />&bull;&nbsp;<a href=http://rss.cnn.com/~r/rss/money_pf/~3/WLx5z5FJnbM/index.htm class='rsslinks' rel='nofollow' target='_blank'>When HR asks about your health</a><br />&bull;&nbsp;<a href=http://rss.cnn.com/~r/rss/money_pf/~3/09lNuKHEeQA/index.htm class='rsslinks' rel='nofollow' target='_blank'>What you can learn from a closed fund</a><br />&bull;&nbsp;<a href=http://rss.cnn.com/~r/rss/money_pf/~3/7pA42qjqjak/index.htm class='rsslinks' rel='nofollow' target='_blank'>Three bills you didn't know were negotiable</a><br />&bull;&nbsp;<a href=http://rss.cnn.com/~r/rss/money_pf/~3/-kHavAM6n0M/ class='rsslinks' rel='nofollow' target='_blank'>Replacing a returned gift</a><br />                    </div>-->
 
 
 	
@@ -152,7 +152,7 @@ a.varlink { text-decoration:none; }
 <tr>
 <td colspan="3" align="center">
 <div class="footer">
-<a href="/privacy.html" rel="nofollow">Privacy Policy</a> | <a href="/contactus.html" rel="nofollow">Contact Us</a> | <a href="/sitemap.html">Sitemap</a> | <a href="/rss/">RSS Feeds</a>
+<a href="/blog/">Blog</a> | <a href="/privacy.html" rel="nofollow">Privacy Policy</a> | <a href="/contactus.html" rel="nofollow">Contact Us</a> | <a href="/sitemap.html">Sitemap</a> | <a href="/rss/">RSS Feeds</a>
 <p>
 We follow the Creative Commons Attribution License for all works we publish.<br>
 This work is licensed under <a href="http://creativecommons.org/licenses/by/.0/" rel="nofollow" "="">cc by 2.0</a>
