--- a/t/th/the/themagicwarehouse.com.html
+++ b/t/th/the/themagicwarehouse.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the themagicwarehouse.com privacy policy that was archived on 2009-05-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090525193416id_/http%3A//themagicwarehouse.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the themagicwarehouse.com privacy policy that was archived on 2009-10-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091002035229id_/http%3A//www.themagicwarehouse.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
